Solve images not showing issue.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -104,7 +104,7 @@ main h2 {
 }
 
 .supporting {
-  background-image: url(../media/img-story-main.PNG);
+  background-image: url(../media/img-story-main.png);
   height: 300px;
   display: flex;
   align-items: center;
@@ -118,11 +118,11 @@ main h2 {
 }
 
 .earth-spins {
-  background-image: url(../media/img-story-2.PNG);
+  background-image: url(../media/img-story-2.png);
 }
 
 .erase-memory {
-  background-image: url(../media/img-story-3.PNG);
+  background-image: url(../media/img-story-3.png);
 }
 
 article p {
@@ -132,7 +132,7 @@ article p {
 /* MEDIUM COLUMN */
 
 .mid-column .img-heading {
-  background-image: url(../media/img-story-1.PNG);
+  background-image: url(../media/img-story-1.png);
 }
 
 .mid-column .small-article {
